--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -12,6 +12,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Java_Project</servlet-name>
 		<url-pattern>/java_project</url-pattern>
 	</servlet-mapping>
+		<servlet>
+		<servlet-name>MyNewServlet</servlet-name>
+		<servlet-class>com.java.project.MyNewServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MyNewServlet</servlet-name>
+		<url-pattern>/mynewservlet</url-pattern>
+	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
