--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -32,6 +32,17 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>StockDetailsServlet</servlet-name>
 		<url-pattern>/stockdetails</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>PortfolioServlet</servlet-name>
+		<servlet-class>com.java.project.servlet.PortfolioServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>PortfolioServlet</servlet-name>
+		<url-pattern>/portfolio</url-pattern>
+	</servlet-mapping>
+	
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
